src/main/java/com/example/demo/exception/error/ItemSNRequiredException.java
package com.example.demo.exception.error;

public class ItemSNRequiredException extends  RuntimeException {
    public ItemSNRequiredException() {
        super("Serial number is needed to created item");
    }
}
